[package]
name = "ark-lasso"
# sync up with Arkwork's version
version = "0.4.0"
authors = [
    # author of original Spartan paper and code base 
    "Srinath Setty <srinath@microsoft.com>",
    # authors who contributed to the Arkworks Spartan fork
    "Zhenfei Zhang <zhenfei.zhang@hotmail.com>",
    # authors who contributed to Lasso
    "Michael Zhu <mzhu@a16z.com>",
    "Sam Ragsdale <sragsdale@a16z.com>",
]
edition = "2021"
description = "LASSO SNARK lookup argument, built on Arkworks"
documentation = "https://github.com/a16z/lasso/README.md"
repository = "https://github.com/a16z/lasso"
license-file = "LICENSE"
keywords = ["zkSNARKs", "cryptography", "proofs"]

[dependencies]
ark-ec = { version = "0.5.0", default-features = false }
ark-ff = { version = "0.5.0", default-features = false }
ark-std = { version = "0.5.0", default-features = false }
ark-serialize =  { version = "0.5.0", default-features = false, features = [ "derive" ] }
ark-curve25519 = "0.5.0"
merlin = "3.0.0"

rayon = { version = "1.10.0", optional = true }
zeroize = { version = "1", default-features = false }
subtle = { version = "2.4", default-features = false }
colored = "3.1.0"

digest = "0.10.7"
hashbrown = "0.16.0"
sha3 = "0.10.1"
rand = "0.9.2"
rand_chacha = { version = "0.10.0", default-features = false }
rand_core = { version = "0.10", default-features = false }


criterion = { version = "0.8.0", features = ["html_reports"] }
clap = { version = "4.3.10", features = ["derive"] }
num-integer = "0.1.45"
seq-macro = "0.3.3"
thiserror = "2.0.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tracing-texray = "0.2.0"
itertools = "0.14.0"

[dev-dependencies]
criterion = "0.8.0"

[lib]
name = "liblasso"
path = "src/lib.rs"

[features]
default = [ 
    "ark-ec/parallel",
    "ark-ff/parallel",
    "ark-std/parallel",    
    "ark-ff/asm",
    "multicore"
]
multicore = ["rayon"]
ark-msm = [] # run with arkworks MSM without small field element optimization

#[[bench]]
#path = "src/benches/dimensions.rs"
#name = "dimensions"
#harness = false

[profile.release]
debug = true
codegen-units = 1
lto = "fat"
